// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StructuredSearch should match snapshot when no results 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  annotationProperties={
    Array [
      Object {
        "label": "rdfAbout",
        "value": "rdfAbout",
      },
    ]
  }
  mapToProps={[Function]}
  structuredSelectedElement="33"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`StructuredSearch should match snapshot when results 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  annotationProperties={
    Array [
      Object {
        "label": "rdfAbout",
        "value": "rdfAbout",
      },
    ]
  }
  mapToProps={[Function]}
  structuredSelectedElement="33"
  structuredSelection={
    Object {
      "1": "node",
      "12": "edge",
      "33": "node",
    }
  }
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
